Fix rotate on IE, update README

--- a/jspui-webapp/src/main/webapp/css/researcher.css
+++ b/jspui-webapp/src/main/webapp/css/researcher.css
@@ -1104,6 +1104,11 @@ a.cris-edit-anchor:hover {
 	border-color: #E17009;
 	color: #E17009;
 }
+
+a.cris-edit-anchor {
+	*top: 16em !important;	
+}
+
 a.cris-edit-anchor {
     -moz-border-bottom-colors: none;
     -moz-border-left-colors: none;
@@ -1132,7 +1137,7 @@ a.cris-edit-anchor {
     text-decoration: none;
     white-space: nowrap;
     left: 10px;
-    top: 40px;
+    top: 40px;    
     width: 12em;
     transform: rotate(90deg);
     transform-origin: left top;
